--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,16 +1,17 @@
-#log4j.rootLogger=CONSOLE,info,error,DEBUG
-log4j.rootLogger=info,error,CONSOLE,DEBUG
+log4j.rootLogger=WARN, Console, RollingFile
 
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender     
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout     
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd-HH-mm} [%t] [%c] [%p] - %m%n     
+#Console
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
-log4j.logger.info=info
-log4j.appender.info=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.info.layout=org.apache.log4j.PatternLayout     
-log4j.appender.info.layout.ConversionPattern=%d{yyyy-MM-dd-HH-mm} [%t] [%c] [%p] - %m%n  
-log4j.appender.info.datePattern='.'yyyy-MM-dd
-log4j.appender.info.Threshold = info   
-log4j.appender.info.append=true   
-log4j.appender.info.File=log
-#log4j.appender.info.File=/Users/dddd/Documents/testspace/pms-api-services/logs/info/api_services_info
+#RollingFile
+log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.RollingFile.File=../logs/fgw.log
+log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
+
+#Project defalult level
+log4j.logger.dl=DUBUG
+log4j.logger.org.springframework=WARN
+log4j.logger.org.mybatis=DUBUG
