龙王排行榜改成图片发送demo

--- a/process/src/main/resources/application.yml
+++ b/process/src/main/resources/application.yml
@@ -52,3 +52,7 @@ logging:
 macAddress: 123
 
 baseFilePath: /root/qq_bot/img
+
+templateFilePath: /root/qq_bot/template
+
+tmpFilePath: /root/qq_bot/tmpfile
