微调帮助功能

--- a/process/src/main/resources/application.yml
+++ b/process/src/main/resources/application.yml
@@ -56,3 +56,8 @@ baseFilePath: /root/qq_bot/img
 templateFilePath: /root/qq_bot/template
 
 tmpFilePath: /root/qq_bot/tmpfile
+
+
+sgdz_account: 123
+
+sgdz_password: 123
