--- a/process/src/main/resources/application.yml
+++ b/process/src/main/resources/application.yml
@@ -25,29 +25,9 @@ spring:
           enabled: true
       default-requeue-rejected: true
 
-#dubbo:
-#  application:
-#    name: process
-#  registry:
-#    address: zookeeper://localhost:2181
-#    timeout: 15000
-#  protocol:
-#    name: dubbo
-#    serialization: kryo
-#    port: 8877
-#  provider:
-#    retries: 0
-#  consumer:
-#    check: false
-#  scan:
-#    base-packages: com.iguigui.process.service.impl
 
 logging:
-  level:
-    org.springframework.security:
-      - debug
-      - info
-    org.springframework.web: error
+  config: classpath:log4j2.xml
 
 macAddress: 123
 
